--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,3 +24,48 @@ jobs:
       run: go run main.go
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Configurar Git
+      run: |
+        git config --global user.name "HVasconcellos"
+        git config --global user.email "horacio.vasconcellos@gmail.com"
+        
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8  mkdocs mike
+        
+    - name: Install dependencies Requirements
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi 
+          
+    - name: Get latest tag
+      id: get_tag
+      run: |
+          LAST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
+          echo "Última tag: $LAST_TAG"
+          echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
+
+    - name: Create Changelog
+      uses: saadmk11/changelog-ci@v1.1.2
+      id: changelog_ci
+      with:
+        changelog_filename: CHANGELOG.md
+        release_version: $LAST_TAG
+        committer_username: 'HVasconcellos'
+        committer_email: 'horacio.vasconcellos@gmail.com'
+        config_file: .github/changelogConfig.yml
+        github_token: ${{ secrets.GITHUB_TOKEN }}      
+        
+    - name: Deploy to GitHub Pages
+      env:
+        LASTTAG: $LAST_TAG
+        MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.MKDOCS_GIT_COMMITTERS_APIKEY }}
+      run: |
+        mike deploy --update-aliases "${LAST_TAG}" latest --allow-empty
+        mike set-default --push latest --allow-empty
